--- a/app/src/main/res/layout/activity_create_booking.xml
+++ b/app/src/main/res/layout/activity_create_booking.xml
@@ -5,7 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CreateBooking">
+    tools:context=".activities.CreateBooking">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="?attr/actionBarTheme"
+        app:navigationIcon="@drawable/menu"
+        android:layout_marginTop="3dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="3dp" />
 
     <TextView
         android:id="@+id/textView11"
@@ -23,15 +35,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnCreate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="80dp"
-            android:background="@drawable/buttons"
-            android:text="Create" />
+
 
         <CheckBox
             android:id="@+id/cbQueryRelatedBooking"
@@ -113,6 +117,16 @@
             android:layout_marginEnd="24dp"
             android:text="- Financial Statement"
             android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/btnCreate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="80dp"
+            android:background="@drawable/buttons"
+            android:text="Create" />
 
         <LinearLayout
             android:layout_width="match_parent"
