--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -29,6 +29,10 @@
             android:icon="@drawable/booking"
             android:title="Create Booking" />
 
+        <item
+            android:id="@+id/nav_fill_form"
+            android:icon="@drawable/fill_in_form"
+            android:title="Fill In A Form" />
 
     </group>
 
