--- a/app/src/main/res/layout/activity_student_profile.xml
+++ b/app/src/main/res/layout/activity_student_profile.xml
@@ -155,6 +155,15 @@
                             android:textColor="#FFFFFF" />
 
                         <TextView
+                            android:id="@+id/tvStudentNum"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:text="TextView"
+                            android:textColor="#FFFFFF" />
+
+                        <TextView
                             android:id="@+id/tvBookingType"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
