--- a/app/src/main/res/layout/activity_fill_form.xml
+++ b/app/src/main/res/layout/activity_fill_form.xml
@@ -181,8 +181,8 @@ the Financial Aid"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                android:hint="Institution Number:"
-                android:inputType="number"/>
+                android:hint="Institution Name:"
+                android:inputType="textPersonName"/>
 
         </LinearLayout>
 
