--- a/app/src/main/res/layout-v21/toolbar.xml
+++ b/app/src/main/res/layout-v21/toolbar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/dark_red"
+    android:background="@android:color/holo_orange_light"
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:navigationIcon="@drawable/menu">
