--- a/app/src/main/res/layout/activity_create_query.xml
+++ b/app/src/main/res/layout/activity_create_query.xml
@@ -7,168 +7,149 @@
     android:orientation="vertical"
     tools:context=".activities.CreateQuery">
 
-        <TextView
-            android:id="@+id/textView10"
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
+        android:text="Create Your Query Below"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:text="Choose the type of query"
+        android:textColor="@color/navy_blue"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
+
+
+    <CheckBox
+        android:id="@+id/cbMealAllowance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/meal_allowance" />
+
+    <CheckBox
+        android:id="@+id/cbAccommodationOrTransportAllowance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/accommodation_or_transport_allowance" />
+
+
+    <CheckBox
+        android:id="@+id/cbBookAllowance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/book_allowance" />
+
+    <!--    <CheckBox-->
+    <!--        android:id="@+id/cbGeneralQuery"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="- General Query" />-->
+
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
+        android:text="Describe your selected query in detail:"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/etQueryMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_horizontal"
-            android:text="Create Your Query Below"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-                                    <TextView
-                                        android:id="@+id/textView19"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginTop="5dp"
-                                        android:text="Choose the type of query"
-                                        android:textColor="#000000"
-                                        android:textSize="16sp" />
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:ems="10"
+            android:layout_gravity="center_horizontal"
+            android:inputType="textPersonName" />
 
 
-
-                                    <CheckBox
-                                        android:id="@+id/cbBookAllowance"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="@string/book_allowance" />
-
-                                    <CheckBox
-                                        android:id="@+id/cbMealAllowance"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="@string/meal_allowance" />
-
-                                    <CheckBox
-                                        android:id="@+id/cbAccommodationOrTransportAllowance"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="@string/accommodation_or_transport_allowance" />
-
-                                    <CheckBox
-                                        android:id="@+id/cbGeneralQuery"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="- General Query" />
-
-                        <TextView
-                            android:id="@+id/textView17"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:gravity="center_horizontal"
-                            android:text="Describe your selected query in detail:"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/buttons"
+            android:drawableLeft="@drawable/save"
+            android:text="Save"
+            android:layout_gravity="center_horizontal"/>
 
 
-                        <EditText
-                            android:id="@+id/etQueryMessage"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginEnd="20dp"
-                            android:ems="10"
-                            android:gravity="center_horizontal"
-                            android:inputType="textPersonName" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tvlist_of_queries"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="List of queries:"
+            android:textStyle="bold" />
 
-                        <Button
-                            android:id="@+id/btnSave"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="80dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginEnd="80dp"
-                            android:background="@drawable/buttons"
-                            android:text="SAVE" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="180dp">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvlist_of_queries"/>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvlist_of_queries"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnDelete"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="List of queries:"
-                android:textStyle="bold"
-                 />
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:text="Delete" />
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="180dp">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvlist_of_queries">
-                </androidx.recyclerview.widget.RecyclerView>
-            </FrameLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnSubmit"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/btnDelete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_weight="1"
-                    android:text="Delete" />
-
-                <Button
-                    android:id="@+id/btnSubmit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_weight="1"
-                    android:text="@string/submit" />
-
-            </LinearLayout>
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:text="@string/submit" />
 
         </LinearLayout>
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal">-->
-<!--        -->
 
-<!--        <Button-->
-<!--            android:id="@+id/btnDelete"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="5dp"-->
-<!--            android:layout_marginEnd="5dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="Delete" />-->
 
-<!--        <Button-->
-<!--            android:id="@+id/btnSubmit"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="5dp"-->
-<!--            android:layout_marginEnd="5dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="@string/submit" />-->
 
-<!--    </LinearLayout>-->
+    </LinearLayout>
 
 </LinearLayout>
