--- a/app/src/main/res/layout/activity_create_request.xml
+++ b/app/src/main/res/layout/activity_create_request.xml
@@ -14,8 +14,8 @@
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="Create A Request Below"
-        android:textColor="#000000"
-        android:textSize="24sp"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -31,10 +31,10 @@
             android:id="@+id/textView28"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:text="Choose the request type:"
-            android:textSize="18sp"
+            android:textColor="@color/navy_blue"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
@@ -42,8 +42,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            android:text="@string/financial_statement" />
+            android:text="@string/financial_statement"
+            android:textColor="@color/navy_blue"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="This allows the Student to access and download their financial statementThis allows the Student to access and download their financial statement"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnViewFinancialStatement"
@@ -57,8 +66,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            android:text="@string/financial_clearance" />
+            android:text="@string/financial_clearance"
+            android:textColor="@color/navy_blue"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="This allows the Student to request for financial clearance"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnRequestFinancialClearance"
