--- a/app/src/main/res/layout/activity_student_profile.xml
+++ b/app/src/main/res/layout/activity_student_profile.xml
@@ -164,6 +164,15 @@
                             android:textColor="#FFFFFF" />
 
                         <TextView
+                            android:id="@+id/tvBookingDate"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:text="TextView"
+                            android:textColor="#FFFFFF" />
+
+                        <TextView
                             android:id="@+id/tvBookingType"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -173,7 +182,16 @@
                             android:textColor="#FFFFFF" />
 
                         <TextView
-                            android:id="@+id/tvDateCreated"
+                            android:id="@+id/tvIsAttendedTo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:text="TextView"
+                            android:textColor="#FFFFFF" />
+
+                        <TextView
+                            android:id="@+id/tvStudentEmail"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
@@ -194,7 +212,7 @@
                             android:layout_width="120dp"
                             android:layout_height="35dp"
                             android:layout_marginStart="25dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="20dp"
                             android:background="@drawable/buttons"
                             android:text="DELETE" />
 
@@ -237,10 +255,19 @@
                             android:text="Your Requests:"
                             android:textColor="#FFFFFF"
                             android:textSize="15sp"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/tvDateRequested"
+                            android:id="@+id/tvRequestStudentNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:textColor="#FFFFFF"
+                            android:text="TextView" />
+
+                        <TextView
+                            android:id="@+id/tvRequestDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
@@ -257,14 +284,6 @@
                             android:textColor="#FFFFFF"
                             android:text="TextView" />
 
-                        <TextView
-                            android:id="@+id/tvDateOfRequest"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginEnd="10dp"
-                            android:textColor="#FFFFFF"
-                            android:text="TextView" />
 
                         <TextView
                             android:id="@+id/tvIsRequestAnswered"
@@ -273,7 +292,7 @@
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="10dp"
                             android:textColor="#FFFFFF"
-                            android:text="TextView" />
+                            android:text="Answered" />
 
                     </LinearLayout>
 
@@ -287,8 +306,8 @@
                             android:id="@+id/btnEditRequest"
                             android:layout_width="120dp"
                             android:layout_height="35dp"
+                            android:layout_marginStart="40dp"
                             android:layout_marginTop="30dp"
-                            android:layout_marginStart="25dp"
                             android:layout_marginBottom="5dp"
                             android:background="@drawable/buttons"
                             android:text="EDIT " />
