--- a/app/src/main/res/layout/announcement_row.xml
+++ b/app/src/main/res/layout/announcement_row.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvAnnounceRow"
         android:layout_width="match_parent"
         android:layout_height="95dp"
         android:layout_margin="5dp"
+        android:background="@drawable/buttons"
         app:cardBackgroundColor="@android:color/holo_orange_light"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
@@ -45,7 +47,7 @@
                     android:layout_weight="3"
                     android:fontFamily="@font/berkshire_swash"
                     android:text="TextView"
-                    android:textColor="#000000"
+                    android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
                 <TextView
@@ -58,7 +60,7 @@
                     android:fontFamily="@font/amaranth"
                     android:text="TextView"
                     android:textAlignment="textEnd"
-                    android:textColor="#000000"
+                    android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -74,7 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TextView"
-                    android:textColor="#000000" />
+                    android:textColor="#FFFFFF" />
 
                 <TextView
                     android:id="@+id/tvTitle"
@@ -83,7 +85,7 @@
                     android:layout_margin="5dp"
                     android:gravity="center_horizontal"
                     android:text="TextView"
-                    android:textColor="#000000"
+                    android:textColor="#FFFFFF"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
