--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -8,10 +8,11 @@
     android:padding="20dp">
 
     <ImageView
+        android:id="@+id/ivUserPic"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@drawable/assistance_logo"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        android:src="@drawable/assistance_logo" />
 
     <TextView
         android:layout_width="wrap_content"
